[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-changelog-pilot"
version = "1.0.0"
description = "🛫 智能API变更日志生成与版本追踪引擎"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gitstq", email = ""}
]
keywords = ["api", "changelog", "version", "git", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
]
yaml = [
    "PyYAML>=5.4.0",
]

[project.scripts]
api-changelog-pilot = "changelog_pilot.__main__:main"
changelog-pilot = "changelog_pilot.__main__:main"
apichangelog = "changelog_pilot.__main__:main"

[project.urls]
Homepage = "https://github.com/gitstq/api-changelog-pilot"
Repository = "https://github.com/gitstq/api-changelog-pilot"
Issues = "https://github.com/gitstq/api-changelog-pilot/issues"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=changelog_pilot --cov-report=term-missing"
